echo-server-example/echo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - image: localhost:5001/echo-server:latest
        name: echo-server
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
